--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,24 @@
   text-align: center;
 }
 
+.redclr{
+  color:red
+}
+.greenclr{
+  color:green
+}
+button{
+  margin-right: 20px;
+  width:100px;
+  height:30px;
+  border:0;
+  border-radius: 10px;
+  color:white;
+  background-color: blue;
+  cursor: pointer;
+  font-weight: bold;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
